# op-message-encryptor-and-ecryptor

./: LICENSE  README.md  ciphered keyboard.ahk  ciphers_to_add.txt  encripter.py  index.html  maths.py  omega setup.bat  pyproject.toml  setup 3 made by chatgpt.bat  wrangler.jsonc
.github/: FUNDING.yml
.github/workflows/: pages.yml  publish-to-pypi.yml  python-tests.yml
A.github/workflows/: python-tests.yml
Ars occultandarum litterarum/: pyproject.toml
Ars occultandarum litterarum/all_the_ciphers/: core.py
Ars occultandarum litterarum/tests/: test_basic.py
apk/v1/: README_APK.md  buildozer.spec  encripter.py  main.py
ars_occultandarum_litterarum/: README.md  __init__.py  __main__.py
ars_occultandarum_litterarum/docs/: index.html
docs/: PYPI_PUBLISHING.md
random stuff/: README.md  index.html  python media drawer.py  weather finder.py
tests/: index.html  test_basic.py
